# meteo-radar

./: .cache.sqlite  .gitignore  LICENSE  README.md  dzm.html  eem.html  main.py  mgd.html  niu.html  njw.html  pyproject.toml  requirements.txt  uim.html  vpq.html  xdo.html
planning/: architecture.md  roadmap.md
reports/: PR_Week7_visuals_fix.md  handover_week8_start.md
src/adapters/: aemet.py  openmeteo.py  supabase_client.py
src/application/: exporter.py  facade.py
src/domain/: model.py  ports.py  services.py
src/ui/: app.py
src/ui/components/: dialogs.py  map_view.py  sidebar.py
src/ui/utils/: data_loader.py  helpers.py
tests/: debug_time.py  test_exporter.py
