[project]
name = "meteo-radar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "leafmap>=0.57.10",
    "numpy>=2.4.1",
    "openmeteo-requests>=1.7.4",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "requests-cache>=1.2.1",
    "retry-requests>=2.0.0",
    "scipy>=1.17.0",
    "streamlit>=1.52.2",
    "xarray>=2025.12.0",
]
