[project]
name = "meteo-radar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "leafmap",
    "localtileserver",
    "numpy",
    "openmeteo-requests",
    "pandas",
    "psutil",
    "pydantic",
    "pydantic-settings",
    "requests-cache",
    "retry-requests",
    "rioxarray",
    "scipy",
    "streamlit",
    "supabase",
    "xarray",
]
